@@ -1,0 +1,78 @@
+# running EIS model with simple erosion.
+# to run this experiment, you will need to copy the data
+# files from the eis experiment in glimmer-tests.
+
+[EIS CONY]
+
+[EIS ELA]
+ela_file = mb.data 
+
+[EIS Temperature]
+temp_file = s10.data
+
+[EIS SLC]
+slc_file = specmap.data
+
+[grid]
+# grid sizes
+ewn = 141
+nsn = 119
+upn = 11
+dew = 20000
+dns = 20000
+
+[options]
+temperature = 1 
+flow_law = 0
+sliding_law = 0
+slip_coeff = 2
+marine_margin = 3
+stress_calc = 2
+evolution = 0
+topo_is_relaxed = 1
+basal_water = 0
+vertical_integration = 1
+
+[time]
+tstart = -120000.
+tend =   0.
+dt = 1.
+ntem = 1.
+nvel = 1.
+niso = 1.
+
+[parameters]
+flow_factor = 3.
+basal_tract_const = 1.e-2
+marine_limit = -500.
+ice_limit = 500.
+
+[isostasy]
+lithosphere = 1
+asthenosphere = 1
+
+[Erosion]
+
+[default]
+title: std, increased sliding, cony with simple erosion
+institution: University of Edinburgh
+references: see PhD Magnus Hagdorn
+
+[output]
+name: fenscan.nc
+frequency: 500
+variables: thk topg eus bmlt slc btemp bwat btrc ubas vbas thkmask acab erate erosion relx
+
+[output]
+name: fenscan.2000a.nc
+frequency: 2000
+variables: thk temp topg eus uvel vvel wvel
+
+[output]
+name: fenscan.10000a.nc
+frequency: 7000
+variables: hot
+
+[input]
+name: europe.20km.nc
+
