@@ -1,3 +1,8 @@
+2004-12-19 Magnus Hagdorn
+ * added EIS driver
+ * changed bedrock erosion factor to something somewhat more
+   reasonable
+
 2004-12-18 Magnus Hagdorn
  * added random topo
 
